--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/profile.html">Profile</a>
+            <a class="nav-link" href="./profile.html">Profile</a>
           </li>
         </ul>
         <button id="logout" class="btn btn-outline-primary" type="submit">Logout</button>
